--- a/style.css
+++ b/style.css
@@ -151,14 +151,15 @@ div{background-color: var(--cor1);}
 /* Aside */
 
 aside{background-color: var(--cor3);
-    padding: 5px;
+    padding: 10px;
     border-radius: 10px;
     margin:10px;
     box-shadow: 2px 1px 4px 1px #00000081;
     
 }
 
-ul{columns: 2;}
+aside > ul{columns: 2;
+list-style-position: inside;}
 
 li::before{content: "✅";}
 
