--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header p{
 }
 
 nav{
-  background-color: black;
+  background-color: rgba(255, 0, 0, 0.801);
   text-align: left;
   padding: 10px; 
   
