--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav{
   
   text-align: left;
   padding: 10px; 
-  background-color: rgba(255, 0, 0, 0.801);
+  background-color:var(--cor1);
   
 }
 
